--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       const input = document.getElementById("courseCode").value.trim();
       const error = document.getElementById("error");
       if (input === PASSCODE) {
-        window.location.href = "index.html";
+        window.location.href = "index2.html";
       } else {
         error.style.display = "block";
       }
