--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </div>
 
   <script>
-    const PASSCODE = "alpha2025";
+    const PASSCODE = "learningcourses2025.!@12345";
     function checkAccess() {
       const input = document.getElementById("courseCode").value.trim();
       const error = document.getElementById("error");
