--- a/communication-skills.html
+++ b/communication-skills.html
@@ -105,36 +105,35 @@
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 2: Understanding Stakeholders & Adapting Your Communication</h4>
-      <p><strong>🎥 Video:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/VIDEO_ID')">Watch Video</a></p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/bV9yUQV6D60')">Watch Video</a></p>
       <p><strong>📝 Activity:</strong> List 3 stakeholder types in your role and how you'd adapt your approach.</p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Take Quiz</a></p>
+      <p><strong>📄 Document:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Document</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 3: Communicating Across Teams, Cultures, and Contexts</h4>
-      <p><strong>🎥 Video:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/VIDEO_ID')">Watch Video</a></p>
-      <p><strong>📄 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/FILE_ID/preview')">View PDF</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Take Quiz</a></p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/7MMTnWFhEKE')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.countrynavigator.com/blog/what-are-the-differences-between-high-context-and-low-context-cultures')">View Article</a></p>
+     <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 4: Communicating with Influence and Authenticity</h4>
-      <p><strong>🎥 Video:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/VIDEO_ID')">Watch Video</a></p>
-      <p><strong>📄 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/FILE_ID/preview')">View PDF</a></p>
-      <p><strong>📝 Activity:</strong> Scenario Challenge: Influence with Authenticity</p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/x9xX2cVQSQY')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> <a href="#" class="resource-link" onclick="openResource('https://nouksanchez.com/nouks-blog/the-7-keys-to-authentic-communication/')">View Article</a></p>
+      <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Scenario Challenge: Influence with Authenticity</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 5: Choosing the Right Channels & Sharing Context Effectively</h4>
-      <p><strong>🎥 Video:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/VIDEO_ID')">Watch Video</a></p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Take Chapter Quiz</a></p>
+      <p><strong>🎥 Video 4:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/qE0ZeAOF-wY')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4><i class="fas fa-calendar-week"></i> Week 6: Strategic Communication Plan</h4>
-      <p><strong>🎥 Video:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/VIDEO_ID')">Watch Video</a></p>
-      <p><strong>📝 Activity:</strong> Final output + summary</p>
-      <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Take Final Quiz</a></p>
+      <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/dpoZldHTYDQ')">Watch Video</a></p>
+      <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">Scenario Challenge: Influence with Authenticity</a></p>
       <p><strong>📨 Submission:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/FORM_ID/viewform?embedded=true')">Click here to submit full course finish outline</a></p>
     </div>
   </main>
