--- a/communication-skills.html
+++ b/communication-skills.html
@@ -89,6 +89,7 @@
         <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
         <li>Fill out all required fields accurately for progress tracking.</li>
         <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
       </ul>
     </div>
 
@@ -99,7 +100,6 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/FI0SLseM5Ws')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/a7jEWltCSpU')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/r2aGDXOCOBI')">Watch Video</a></p>
-      <p><strong>📝 Activity:</strong> Communication Breakdown Simulation — identify errors in workplace communication and rewrite improved versions.</p>
       <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePG28K9Upl9Ob5xfez9zzwJ0EzmAH_1y9xNXqLWCe6ilpcFA/viewform?embedded=true')">Take Quiz</a></p>
     </div>
 
