--- a/communication-skills.html
+++ b/communication-skills.html
@@ -100,6 +100,26 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/FI0SLseM5Ws')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/a7jEWltCSpU')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/r2aGDXOCOBI')">Watch Video</a></p>
+      <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('#activity-breakdown')">Communication Breakdown Simulation</a></p>
+<!-- Hidden activity content loaded via modal -->
+<template id="activity-breakdown">
+  <div style="padding: 16px; font-family: 'Segoe UI', sans-serif;">
+    <h3>🛠️ Communication Breakdown Simulation</h3>
+    <p><em>(Forum or worksheet activity)</em></p>
+    <ul>
+      <li>Employees will be presented with a simple workplace scenario where communication failed (e.g., email misinterpretation, tone confusion, unclear instructions).</li>
+      <li><strong>Task:</strong> Identify what went wrong in the scenario and rewrite a better version of the message or describe how they would improve the communication in person.</li>
+    </ul>
+    <hr>
+    <h4>📸 Slack Scenario:</h4>
+    <p><strong>Chris Mitchell (6:19 PM):</strong> The power went out for a few minutes just now and I lost everything I’d been working on for the past 3 hours!!!</p>
+    <p><strong>Jamie Smith (6:33 PM):</strong> 🫣🧠🧯🫠🔋📉😵‍💫🪫☠️</p>
+    <p><strong>Chris Mitchell (6:36 PM):</strong> ? Please use words..</p>
+    <hr style="margin-top: 20px;">
+    <p><strong>✍️ Instruction:</strong> After reviewing the scenario above, reflect on what went wrong and how it could have been communicated more clearly.</p>
+    <p><strong>📌 Put your answer on the Google Form quiz sheet via the <em>Quiz</em> button on this course.</strong></p>
+  </div>
+</template>
       <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePG28K9Upl9Ob5xfez9zzwJ0EzmAH_1y9xNXqLWCe6ilpcFA/viewform?embedded=true')">Take Quiz</a></p>
     </div>
 
