--- a/communication-skills.html
+++ b/communication-skills.html
@@ -100,7 +100,7 @@
       <p><strong>🎥 Video 1:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/FI0SLseM5Ws')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/a7jEWltCSpU')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/r2aGDXOCOBI')">Watch Video</a></p>
-      <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://yourdomain.com/activities/communication-breakdown-simulation.html')">Communication Breakdown Simulation</a></p>
+      <p><strong>📝 Activity:</strong> <a href="#" class="resource-link" onclick="openResource('https://learninganddevelopmentfr.github.io/Online-Learning-Courses-on-Continuous-Organizational-Readiness-Excellence-CORE-/communication-breakdown-simulation.html')">Communication Breakdown Simulation</a></p>
       <p><strong>🧠 Quiz:</strong> <a href="#" class="resource-link" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePG28K9Upl9Ob5xfez9zzwJ0EzmAH_1y9xNXqLWCe6ilpcFA/viewform?embedded=true')">Take Quiz</a></p>
     </div>
 
