--- a/index2.html
+++ b/index2.html
@@ -149,9 +149,10 @@
       <h3><i class="fas fa-comments"></i> Collaboration & Communication</h3>
       <div id="comm" class="course-list">
         <button class="course-btn" onclick="redirectToCourse('communication-skills.html', event)">Communication Skills</button>
-        <button class="course-btn" onclick="redirectToCourse('teamwork.html', event)">Teamwork</button>
+        <button class="course-btn" onclick="redirectToCourse('communicating-for-great-teamwork.html', event)">Communicating for Great Teamwork</button>
+        <button class="course-btn" onclick="redirectToCourse('collaboration-communication-influencing.html', event)">Influencing</button>
+        <button class="course-btn" onclick="redirectToCourse('strategic-stakeholder-communication.html', event)">Strategic Stakeholder Communication</button>
         <button class="course-btn" onclick="redirectToCourse('build-trust.html', event)">Build Trustful Relationships</button>
-        <button class="course-btn" onclick="redirectToCourse('influencing.html', event)">Influencing</button>
         <button class="course-btn" onclick="redirectToCourse('stakeholder-management.html', event)">Stakeholder Management</button>
       </div>
     </div>
@@ -159,6 +160,7 @@
     <div class="category-card" onclick="toggleCourses('prod')">
       <h3><i class="fas fa-chart-line"></i> Execution & Productivity</h3>
       <div id="prod" class="course-list">
+        <button class="course-btn" onclick="redirectToCourse('productivity-focus-course.html', event)">Productivity & Focus</button>
         <button class="course-btn" onclick="redirectToCourse('work-and-planning.html', event)">Work and Planning</button>
         <button class="course-btn" onclick="redirectToCourse('productivity-efficiency.html', event)">Productivity and Efficiency</button>
         <button class="course-btn" onclick="redirectToCourse('performance-feedback.html', event)">Performance Feedback</button>
@@ -170,8 +172,9 @@
     <div class="category-card" onclick="toggleCourses('prob')">
       <h3><i class="fas fa-lightbulb"></i> Problem Solving & Innovation</h3>
       <div id="prob" class="course-list">
-        <button class="course-btn" onclick="redirectToCourse('problem-solving.html', event)">Problem Solving</button>
-        <button class="course-btn" onclick="redirectToCourse('decision-making.html', event)">Decision Making</button>
+        <button class="course-btn" onclick="redirectToCourse('problem-solving-innovation.html', event)">Problem Solving & Innovation</button>
+        <button class="course-btn" onclick="redirectToCourse('decision-making-better-outcomes.html', event)">Decision Making for Better Outcomes</button>
+        <button class="course-btn" onclick="redirectToCourse('thriving-through-change.html', event)">Thriving Through Change</button>
         <button class="course-btn" onclick="redirectToCourse('innovation.html', event)">Innovation</button>
         <button class="course-btn" onclick="redirectToCourse('frame-opportunity.html', event)">Frame Opportunity</button>
       </div>
