--- a/communicating-for-great-teamwork.html
+++ b/communicating-for-great-teamwork.html
@@ -67,10 +67,16 @@
 
   <main class="container section">
     <div class="instructions">
-      <p><strong>Status:</strong> Completed</p>
-      <p>To help new employees build strong communication habits that support aligned, inclusive, and future-ready teams.</p>
+      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+      <ul>
+        <li>Complete each week in order — finish video, activity, and quiz.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
+      </ul>
     </div>
-
+    
     <div class="week">
       <h4>Week 1: What Makes a Great Team?</h4>
       <p><strong>Objective:</strong> Understand how communication contributes to team alignment and shared goals.</p>
