--- a/productivity-focus-course.html
+++ b/productivity-focus-course.html
@@ -67,7 +67,14 @@
 
   <main class="container section">
     <div class="instructions">
-      <p><strong>Status:</strong> In progress</p>
+      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+      <ul>
+        <li>Complete each week in order — finish video, activity, and quiz.</li>
+        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
+        <li>Fill out all required fields accurately for progress tracking.</li>
+        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
+        <li>Ensure to submit your week 6 acknowledgement form</li>
+      </ul>
     </div>
 
     <div class="week">
