--- a/collaboration-communication-influencing.html
+++ b/collaboration-communication-influencing.html
@@ -80,7 +80,18 @@
     <div class="week">
       <h4>Week 1: Introduction to Influencing</h4>
       <p><strong>Objective:</strong> Understand the fundamentals of influencing in organizational settings.</p>
-      <p><strong>Video:</strong> Intro to Collaboration & Communication: Influencing Course; The Power of Influence; Influence Change at Any Level</p>
+      <p><strong>🎥 Video 1:</strong> 
+<a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/1JPXdZR4m1Q_YuQoOsjTnDnQvEMjDC5aV8h0Zy_zb0y0/preview')">Watch Video</a>
+</p>
+
+<p><strong>🎥 Video 2:</strong> 
+<a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/goSXuGe8Er0')">Watch Video</a>
+</p>
+
+<p><strong>🎥 Video 3:</strong> 
+<a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/U5VbM95rY58')">Watch Video</a>
+</p>
+
       <p><strong>Quiz:</strong> How Strong Are Your Influencing Skills?</p>
       <p><strong>Main Activity:</strong> Week 1 Quiz</p>
     </div>
