--- a/collaboration-communication-influencing.html
+++ b/collaboration-communication-influencing.html
@@ -81,17 +81,14 @@
       <h4>Week 1: Introduction to Influencing</h4>
       <p><strong>Objective:</strong> Understand the fundamentals of influencing in organizational settings.</p>
       <p><strong>🎥 Video 1:</strong> 
-<a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/1JPXdZR4m1Q_YuQoOsjTnDnQvEMjDC5aV8h0Zy_zb0y0/preview')">Watch Video</a>
-</p>
-
-<p><strong>🎥 Video 2:</strong> 
-<a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/goSXuGe8Er0')">Watch Video</a>
-</p>
-
-<p><strong>🎥 Video 3:</strong> 
-<a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/U5VbM95rY58')">Watch Video</a>
-</p>
-
+      <a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/1JPXdZR4m1Q_YuQoOsjTnDnQvEMjDC5aV8h0Zy_zb0y0/preview')">Watch Video</a>
+      </p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/goSXuGe8Er0')">Watch Video</a>
+      </p>
+      <p><strong>🎥 Video 3:</strong> 
+      <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/U5VbM95rY58')">Watch Video</a>
+      </p>
       <p><strong>Quiz:</strong> How Strong Are Your Influencing Skills?</p>
       <p><strong>Main Activity:</strong> Week 1 Quiz</p>
     </div>
@@ -134,9 +131,33 @@
     </div>
   </main>
 
+  <!-- Modal for resource iframe -->
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
