--- a/collaboration-communication-influencing.html
+++ b/collaboration-communication-influencing.html
@@ -79,59 +79,65 @@
 
     <div class="week">
       <h4>Week 1: Introduction to Influencing</h4>
-      <p><strong>Objective:</strong> Understand the fundamentals of influencing in organizational settings.</p>
       <p><strong>🎥 Video 1:</strong> 
-      <a href="#" class="resource-link" onclick="openResource('https://drive.google.com/file/d/1JPXdZR4m1Q_YuQoOsjTnDnQvEMjDC5aV8h0Zy_zb0y0/preview')">Watch Video</a>
-      </p>
+      <a href="#" onclick="openResource('https://drive.google.com/file/d/1JPXdZR4m1Q_YuQoOsjTnDnQvEMjDC5aV8h0Zy_zb0y0/preview')">Watch Video</a></p>
       <p><strong>🎥 Video 2:</strong> 
-      <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/goSXuGe8Er0')">Watch Video</a>
-      </p>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/goSXuGe8Er0')">Watch Video</a></p>
       <p><strong>🎥 Video 3:</strong> 
-      <a href="#" class="resource-link" onclick="openResource('https://www.youtube.com/embed/U5VbM95rY58')">Watch Video</a>
-      </p>
-      <p><strong>Quiz:</strong> How Strong Are Your Influencing Skills?</p>
-      <p><strong>Main Activity:</strong> Week 1 Quiz</p>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/U5VbM95rY58')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="https://www.mindtools.com/amtdps3/how-strong-are-your-influencing-skills" target="_blank">Take Quiz</a></p>
+      <p><strong>📝 Main Activity:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePG28K9Upl9Ob5xfez9zzwJ0EzmAH_1y9xNXqLWCe6ilpcFA/viewform?embedded=true')">Week 1 Quiz Form</a></p>
     </div>
 
     <div class="week">
       <h4>Week 2: How to Work with Leaders</h4>
-      <p><strong>Objective:</strong> Learn how to engage leaders and align priorities.</p>
-      <p><strong>Video:</strong> How to Communicate with Your Boss: 8 Tips for a Successful Conversation</p>
-      <p><strong>Main Activity:</strong> Reflection on how you talk to your boss</p>
-      <p><strong>Other Handovers:</strong> How to make a great impression when speaking to senior leadership</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/C06BEs-xBok')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSePvftw20-SBOAYy_lgkGZaZMqyWgEfrakmDuXWyBxOV7AY8A/viewform?embedded=true')">Take Quiz</a></p>
+      <p><strong>📖 Reading:</strong> 
+      <a href="https://www.duarte.com/blog/speaking-to-senior-leadership/" target="_blank">View Article</a></p>
     </div>
 
     <div class="week">
       <h4>Week 3: Make Your Network Stronger</h4>
-      <p><strong>Objective:</strong> Learn how to connect with the right people inside and outside your company.</p>
-      <p><strong>Video:</strong> Best Networking Tips: How to Make a Connection; 3 Ways to Better Connect with Your Coworkers</p>
-      <p><strong>Main Activity:</strong> Week 3 Quiz: Make your network stronger</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/OVf5c7NthSw')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/zgtD2Cerots')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSdY4tY7oR5e3_zegOEpDDdKL7vhGTUZPBcXvOM2KXt3sEyLRA/viewform?embedded=true')">Take Quiz</a></p>
     </div>
 
     <div class="week">
       <h4>Week 4: Practice Persuasion with Voice Messages</h4>
-      <p><strong>Objective:</strong> Record short, simple responses to work problem.</p>
-      <p><strong>Main Activity:</strong> Week 4: Practice Persuasion with Voice Messages</p>
+      <p><strong>📝 Activity:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfA8JmPKLvShiB-41G7SRQDjV6XWY7-LM_tJ0GI9pnZvev80A/viewform?embedded=true')">Submit Activity</a></p>
     </div>
 
     <div class="week">
       <h4>Week 5: Handle "No"</h4>
-      <p><strong>Objective:</strong> Learn why people say “no” and how to respond with empathy and persuasion.</p>
-      <p><strong>Video:</strong> How to Change Someone’s Mind - 5 Rules to Follow</p>
-      <p><strong>Quiz:</strong> Week 5 Chapter Quiz</p>
-      <p><strong>Other Handovers:</strong> Dealing with “No”; How to handle rejection personally and professionally</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/xHtvsCzt0bA')">Watch Video</a></p>
+      <p><strong>📝 Activity:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSfjG_d-lv9oUMcW8yIaDQsoC0ziOr4ZipiwPCBRfPmH7Cl_4g/viewform?embedded=true')">Submit Activity</a></p>
     </div>
 
     <div class="week">
       <h4>Week 6: Use Your Influencing Skills</h4>
-      <p><strong>Objective:</strong> Apply what you’ve learned from this course.</p>
-      <p><strong>Video:</strong> Collaboration & Communication: Influencing Course Summary</p>
-      <p><strong>Main Activity:</strong> Week 6: Final Activity</p>
-      <p><strong>Other Handovers:</strong> How to Develop Your Influence Skills as a Learning Leader; Influencing: Learn How to Use the Skill of Persuasion</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://drive.google.com/file/d/1o4RakYoPtQX6yfXrgm-YVbwd0jGHXHkJnw3cQwLHbQc/preview')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/forms/d/e/1FAIpQLSe01m7ichrXfgw7Htp6bxSe8cWJcU56AukMCq-ETfebZevTNA/viewform?embedded=true')">Take Quiz</a></p>
+      <p><strong>📖 Reading 1:</strong> 
+      <a href="https://trainingindustry.com/articles/professional-development/how-to-develop-your-influence-skills-as-a-learning-leader/" target="_blank">View Article</a></p>
+      <p><strong>📖 Reading 2:</strong> 
+      <a href="https://www.ccl.org/articles/white-papers/learn-persuasion-skills/" target="_blank">View Article</a></p>
     </div>
   </main>
 
-  <!-- Modal for resource iframe -->
   <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content">
@@ -150,7 +156,6 @@
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     function openResource(url) {
