--- a/communicating-for-great-teamwork.html
+++ b/communicating-for-great-teamwork.html
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -47,7 +36,6 @@
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -62,74 +50,99 @@
 
   <header>
     <h1><i class="fas fa-users"></i> Communicating for Great Teamwork</h1>
-    <p>PROJECT CORE - Soft Skills Short Course - Research</p>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
+
+    <div class="week">
+      <h4>Week 1</h4>
+      <p><strong>🎥 Video:</strong>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/uNQkD-Pt0OE')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong>
+      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+      <p><strong>📝 Activity:</strong> Identify a team you’ve been part of. What made it effective or ineffective? Submit 3 reflections:</p>
       <ul>
-        <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
-        <li>Fill out all required fields accurately for progress tracking.</li>
-        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
-        <li>Ensure to submit your week 6 acknowledgement form</li>
+        <li>One thing the team did well</li>
+        <li>One breakdown in communication</li>
+        <li>One thing you’d do differently now</li>
+      </ul>
+      <p><a href="#" onclick="openResource('YOUR_GOOGLE_FORM_EMBED_LINK')">Submit Activity</a></p>
+    </div>
+
+    <div class="week">
+      <h4>Week 2</h4>
+      <p><strong>🎥 Video:</strong>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/Z5yapEzg9xc')">Watch Video</a></p>
+      <p><strong>📖 Reading Material:</strong>
+      <a href="https://www.verywellmind.com/disc-personality-quiz-8655057?utm_source=chatgpt.com" target="_blank">View Article</a></p>
+      <p><strong>🧠 Quiz:</strong>
+      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+    </div>
+
+    <div class="week">
+      <h4>Week 3</h4>
+      <p><strong>🎥 Video:</strong>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/-Zfy3Ef8P_0')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong>
+      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview#heading=h.hrbwha56fmwi')">View Quiz</a></p>
+      <p><strong>📝 Main Activity:</strong> Choose a scenario (e.g., miscommunication, disengagement, frustration). Write how you would respond in a supportive, clear, and respectful way.</p>
+    </div>
+
+    <div class="week">
+      <h4>Week 5</h4>
+      <p><strong>Objective:</strong> Understand how day-to-day communication supports development, learning, and planning for future needs.</p>
+      <p><strong>🎥 Video:</strong>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/35D-8mDBsCg')">Watch Video</a></p>
+      <p><strong>📖 Reading Material:</strong>
+      <a href="https://www.gallup.com/workplace/236441/feedback-not-improving.aspx" target="_blank">View Article</a></p>
+    </div>
+
+    <div class="week">
+      <h4>Week 6</h4>
+      <p><strong>Objective:</strong> Reflect on what you've learned and apply it to a real or hypothetical team situation.</p>
+      <p><strong>🎥 Video:</strong>
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/79eiqn_KFVA')">Watch Video</a></p>
+      <p><strong>🧠 Quiz:</strong>
+      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Quiz</a></p>
+      <p><strong>Final Output – Team Communication Plan:</strong> Includes:</p>
+      <ul>
+        <li>Team purpose</li>
+        <li>Roles & preferences</li>
+        <li>Communication norms</li>
+        <li>Conflict prevention methods</li>
+        <li>Growth check-ins</li>
+        <li>Sample message/touchpoint</li>
       </ul>
     </div>
-    
-    <div class="week">
-      <h4>Week 1: What Makes a Great Team?</h4>
-      <p><strong>Objective:</strong> Understand how communication contributes to team alignment and shared goals.</p>
-      <p><strong>Video:</strong> What Makes a Team Great?</p>
-      <p><strong>Quiz:</strong> Q&As</p>
-      <p><strong>Main Activity:</strong> Reflect on a team you've been part of (3 points: one thing done well, one breakdown, one thing you'd do differently).</p>
-    </div>
 
-    <div class="week">
-      <h4>Week 2: Being an Active Communicator in Teams</h4>
-      <p><strong>Objective:</strong> Learn to communicate in ways that build trust, clarify direction, and move the team forward.</p>
-      <p><strong>Video:</strong> 4 Keys To Effective Team Communication</p>
-      <p><strong>Reading:</strong> Fostering Trust Within Teams (Harvard Business Review)</p>
-      <p><strong>Quiz:</strong> Q&As</p>
-      <p><strong>Main Activity:</strong> Submit a short script or voice note showing how you'd clarify direction while maintaining trust.</p>
-    </div>
-
-    <div class="week">
-      <h4>Week 3: Understanding People: Personalities, Preferences & Strengths</h4>
-      <p><strong>Objective:</strong> Recognize personality types and communication styles that impact team collaboration.</p>
-      <p><strong>Video:</strong> Understanding Team Personality Types and Team Dynamics</p>
-      <p><strong>Reading:</strong> What’s Your DISC Personality Type? (Quiz)</p>
-      <p><strong>Quiz:</strong> Q&As</p>
-      <p><strong>Main Activity:</strong> DISC reflection: your type + what it means for your team communication.</p>
-    </div>
-
-    <div class="week">
-      <h4>Week 4: Handling Common Team Communication Challenges</h4>
-      <p><strong>Objective:</strong> Apply communication skills to navigate small conflicts, misunderstandings, or team friction.</p>
-      <p><strong>Video:</strong> Team Leadership: Handling Team Problems</p>
-      <p><strong>Quiz:</strong> Q&As</p>
-      <p><strong>Main Activity:</strong> Choose a scenario and write your supportive, clear, respectful response.</p>
-    </div>
-
-    <div class="week">
-      <h4>Week 5: Supporting Team Growth & Development Conversations</h4>
-      <p><strong>Objective:</strong> Understand how day-to-day communication supports development, learning, and planning for future needs.</p>
-      <p><strong>Video:</strong> Encouraging Your Team To Grow Their Skills</p>
-      <p><strong>Reading:</strong> <a href="https://www.gallup.com/workplace/236441/feedback-not-improving.aspx" target="_blank">Feedback Isn't Improving (Gallup)</a></p>
-      <p><strong>Quiz:</strong> Chapter quiz (Week 1-3 content + reading)</p>
-    </div>
-
-    <div class="week">
-      <h4>Week 6: Putting It All Together: Communication That Builds Teams</h4>
-      <p><strong>Objective:</strong> Reflect on what you've learned and apply it to a real or hypothetical team situation.</p>
-      <p><strong>Video:</strong> Fostering Effective Team Collaboration and Communication</p>
-      <p><strong>Main Activity:</strong> Final output: Team Communication Plan (purpose, roles, norms, conflict prevention, growth check-ins, sample touchpoint).</p>
-    </div>
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
