--- a/thriving-through-change.html
+++ b/thriving-through-change.html
@@ -23,19 +23,8 @@
       padding: 2rem;
       text-align: center;
     }
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
     .section {
       padding: 2rem 1rem;
-    }
-    .instructions {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      padding: 1rem;
-      margin-bottom: 2rem;
-      border-radius: 8px;
     }
     .week {
       background-color: white;
@@ -47,7 +36,6 @@
     }
     .week h4 {
       color: var(--primary);
-      margin-bottom: 0.5rem;
     }
     .footer {
       background-color: var(--primary);
@@ -62,69 +50,107 @@
 
   <header>
     <h1><i class="fas fa-sync-alt"></i> Thriving Through Change</h1>
-    <p>PROJECT CORE - Soft Skills Short Course - Research</p>
+    <p>PROJECT CORE - Soft Skills Short Course</p>
   </header>
 
   <main class="container section">
-    <div class="instructions">
-      <p><i class="fas fa-info-circle"></i><strong> Please read before starting:</strong></p>
-      <ul>
-        <li>Complete each week in order — finish video, activity, and quiz.</li>
-        <li>Use the <strong>same email address</strong> across all Google Form submissions.</li>
-        <li>Fill out all required fields accurately for progress tracking.</li>
-        <li>Click links below to open videos, PDFs, or quizzes in a pop-up window.</li>
-        <li>Ensure to submit your week 6 acknowledgement form</li>
-      </ul>
-    </div>
 
     <div class="week">
       <h4>Week 1: Understanding the Impacts of Change</h4>
       <p><strong>Objective:</strong> Recognize how change impacts people, risk, and productivity and why those factors matter.</p>
-      <p><strong>Video:</strong> Understanding the Impact of Changes; Navigate and Embrace Change | Simon Sinek</p>
-      <p><strong>Reading:</strong> Building Trust Through Effective Organizational Change Communication</p>
-      <p><strong>Quiz:</strong> Q&As</p>
-      <p><strong>Other Handovers:</strong> <a href="https://www.smartsheet.com/sites/default/files/IC-Impact-Assessment-9306_PDF.pdf" target="_blank">Impact Assessment PDF</a></p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/Lc4mBtiss3I')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/pUmTQ-86-YI')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> 
+      <a href="https://ronntorossian.medium.com/building-trust-through-effective-organizational-change-communication-9e37be3c11e3" target="_blank">Building Trust Through Effective Organizational Change Communication</a></p>
+      <p><strong>🧠 Quiz:</strong> 
+      <a href="#" onclick="openResource('https://docs.google.com/document/d/1Gbz5MrDYiGY9eVeNF5uWm_6EF7uV7L-Bhh3lfDSvYkg/preview')">View Q&As</a></p>
     </div>
 
     <div class="week">
       <h4>Week 2: How Change Activities Work Across Teams and Regions</h4>
       <p><strong>Objective:</strong> Understand the basic structure of effective change activities (communications, timelines, ownership, check-ins).</p>
-      <p><strong>Video:</strong> What is Change Management?; 5 Steps in the Change Management Process</p>
+      <p><strong>🎥 Video:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/wxVgd8h1svU')">Watch Video</a></p>
     </div>
 
     <div class="week">
       <h4>Week 3: Working With Support Functions to Enable Change</h4>
       <p><strong>Objective:</strong> Understand how functions like HR, Finance, and Engineering support change and learn how anyone can coordinate with support functions (even without authority).</p>
-      <p><strong>Video:</strong> What to do with support functions?; What's YOUR Role in Change Management?</p>
-      <p><strong>Main Activity:</strong> Choose a support function; describe partnership + submit 2 collaboration steps.</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/l2-wGQBUdMc?start=11')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/eScnBYZ_IAY')">Watch Video</a></p>
+      <p><strong>📝 Main Activity:</strong> Choose a support function (e.g., IT, HR):</p>
+      <ul>
+        <li>Describe how you’d partner with them during a change</li>
+        <li>Submit 2 collaboration steps</li>
+      </ul>
     </div>
 
     <div class="week">
       <h4>Week 4: Adapting and Asking the Right Questions in Change</h4>
       <p><strong>Objective:</strong> Recognize challenges in cross-functional or multi-region change and consider how to check alignment, verify if change is working, and make adjustments.</p>
-      <p><strong>Video:</strong> How to Adapt to Change in the Workplace</p>
-      <p><strong>Reading:</strong> Seven R’s Change Management Checklist</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/qb7iPkeJSJY')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/lMM9Br9a6RM?start=765')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> 
+      <a href="https://checkify.com/checklists/seven-rs-of-change-management-checklist/" target="_blank">Seven R’s Change Management Checklist</a></p>
     </div>
 
     <div class="week">
       <h4>Week 5: Leading with Care During Change</h4>
-      <p><strong>Objective:</strong> Explore how transparency, trust, and collaboration shape successful change.</p>
-      <p><strong>Video:</strong> How to Approach Change Management with Transparency; Why Transparency is Critical to Creating Trust</p>
-      <p><strong>Reading:</strong> How to Approach Change Management with Transparency — Galen Emanuele</p>
-      <p><strong>Quiz:</strong> Chapter quiz</p>
+      <p><strong>Objective:</strong> Explore how transparency, trust, and collaboration shape successful change and understand how every employee can model openness and inclusion.</p>
+      <p><strong>🎥 Video 1:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/0oVppTj6M5U')">Watch Video</a></p>
+      <p><strong>🎥 Video 2:</strong> 
+      <a href="#" onclick="openResource('https://www.youtube.com/embed/do6e1UE4ruI')">Watch Video</a></p>
+      <p><strong>📖 Reading:</strong> 
+      <a href="https://galenemanuele.com/blog/change-transparency" target="_blank">How to Approach Change Management with Transparency</a></p>
     </div>
 
     <div class="week">
       <h4>Week 6: Your Role in Change</h4>
       <p><strong>Objective:</strong> Reflect on your role in enabling, adapting to, or supporting change.</p>
-      <p><strong>Video:</strong> How to Approach Change Management with Transparency; What's YOUR Role in Change Management?</p>
-      <p><strong>Main Activity:</strong> Submit “My Role in Change” Plan: key role, actions, 3 practical steps going forward.</p>
+      <p><strong>🎥 Video 1:</strong> [Insert link if available]</p>
+      <p><strong>🎥 Video 2:</strong> [Insert link if available]</p>
+      <p><strong>🧠 Quiz:</strong> [Insert Google Form link when ready]</p>
+      <p><strong>📝 Main Activity:</strong> Submit your “My Role in Change” Plan:</p>
+      <ul>
+        <li>Your key role & actions in a change scenario</li>
+        <li>At least 3 practical steps you will take going forward</li>
+      </ul>
     </div>
+
   </main>
+
+  <div class="modal fade" id="resourceModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Course Resource</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe id="resourceFrame" src="" style="width:100%; height:500px; border:none;"></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 Alpha Iota | Internal Course Page | Project C.O.R.E.</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function openResource(url) {
+      document.getElementById('resourceFrame').src = url;
+      const modal = new bootstrap.Modal(document.getElementById('resourceModal'));
+      modal.show();
+    }
+  </script>
 </body>
 </html>
