--- a/thriving-through-change.html
+++ b/thriving-through-change.html
@@ -122,18 +122,21 @@
       <a href="https://galenemanuele.com/blog/change-transparency" target="_blank">How to Approach Change Management with Transparency</a></p>
     </div>
 
-    <div class="week">
-      <h4>Week 6: Your Role in Change</h4>
-      <p><strong>Objective:</strong> Reflect on your role in enabling, adapting to, or supporting change.</p>
-      <p><strong>🎥 Video 1:</strong> [Insert link if available]</p>
-      <p><strong>🎥 Video 2:</strong> [Insert link if available]</p>
-      <p><strong>🧠 Quiz:</strong> [Insert Google Form link when ready]</p>
-      <p><strong>📝 Main Activity:</strong> Submit your “My Role in Change” Plan:</p>
-      <ul>
-        <li>Your key role & actions in a change scenario</li>
-        <li>At least 3 practical steps you will take going forward</li>
-      </ul>
-    </div>
+<div class="week">
+  <h4>Week 6: Your Role in Change</h4>
+  <p><strong>Objective:</strong> Reflect on your role in enabling, adapting to, or supporting change.</p>
+  <p><strong>🎥 Video 1:</strong> 
+  <a href="#" onclick="openResource('https://www.youtube.com/embed/0oVppTj6M5U?start=221')">Watch Video</a></p>
+  <p><strong>🎥 Video 2:</strong> 
+  <a href="#" onclick="openResource('https://www.youtube.com/embed/eScnBYZ_IAY?start=222')">Watch Video</a></p>
+  <p><strong>🧠 Quiz:</strong> [Insert Google Form link when ready]</p>
+  <p><strong>📝 Main Activity:</strong> Submit your “My Role in Change” Plan:</p>
+  <ul>
+    <li>Your key role & actions in a change scenario</li>
+    <li>At least 3 practical steps you will take going forward</li>
+  </ul>
+</div>
+
 
   </main>
 
